--- a/oldneighborhood-announcement-management/src/main/resources/templates/info.html
+++ b/oldneighborhood-announcement-management/src/main/resources/templates/info.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>neighborhood-annoucement-service</title>
+<title>neighborhood-management-service</title>
 </head>
 <body>
 	<table border="1">
 		<thead>
 			<tr>
-				<th>neighborhood-annoucement-service</th>
-				<th>url</th>
-				<th>request</th>
-				<th>response</th>
+				<th width="20%">neighborhood-management-service</th>
+				<th width="20%">url</th>
+				<th width="40%">request</th>
+				<th width="20%">response</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -55,6 +55,84 @@
 				<td>删除公告</td>
 				<td>/announcement/delete</td>
 				<td>{"a_ID":a_ID}</td>
+				<td>{"result":"success"/"error"}</td>
+			</tr>
+		</tbody>
+	</table>
+	<table border="1">
+		<thead>
+			<tr>
+				<th width="20%">neighborhood-management-service</th>
+				<th width="20%">url</th>
+				<th width="40%">request</th>
+				<th width="20%">response</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>景点列表分页</td>
+				<td>/site/list</td>
+				<td>{"current_page":1, "page_size":20}</td>
+				<td>[siteobj1][siteobj2]...</td>
+			</tr>
+			<tr>
+				<td>景点全部列表</td>
+				<td>/list/listall</td>
+				<td></td>
+				<td>[siteobj1][siteobj2]...</td>
+			</tr>
+			<tr>
+				<td>模糊搜索景点</td>
+				<td>/site/search</td>
+				<td>{"sitename":""}</td>
+				<td>[siteobj1][siteobj2]...</td>
+			</tr>
+			<tr>
+				<td>名称搜索景点(可能出错,景点重名)</td>
+				<td>/site/find</td>
+				<td>{"sitename":""}</td>
+				<td>{siteobj}</td>
+			</tr>
+			<tr>
+				<td>ID搜索景点(ID - Integer)</td>
+				<td>/site/findID</td>
+				<td>{"site_ID":}</td>
+				<td>{siteobj}</td>
+			</tr>
+			<tr>
+				<td>添加景点</td>
+				<td>/site/add</td>
+				<td>{"site_name":"","site_time":"","site_address":"","site_type":"","site_ticket": ,"ad_ID":""}</td>
+				<td>{"result":"success"/"error"}</td>
+			</tr>
+			<tr>
+				<td>景点图片上传</td>
+				<td>/site/image</td>
+				<td></td>
+				<td>{"result":"success"/"error"}</td>
+			</tr>
+			<tr>
+				<td>更新景点</td>
+				<td>/site/update</td>
+				<td>{"site_ID":,"site_name":"","site_address":"","site_ticket":,"site_time":"","site_image":"",<br/>"site_intro":"","site_tele":"","site_web":"","site_email":""}</td>
+				<td>{"result":"success"/"error"}</td>
+			</tr>
+			<tr>
+				<td>删除景点</td>
+				<td>/site/delete</td>
+				<td>{"site_ID":}</td>
+				<td>{"result":"success"/"error"}</td>
+			</tr>
+			<tr>
+				<td>关闭景点</td>
+				<td>/site/close</td>
+				<td>{"site_ID":}</td>
+				<td>{"result":"success"/"error"}</td>
+			</tr>
+			<tr>
+				<td>更改景点类型</td>
+				<td>/site/change</td>
+				<td>{"site_ID":,"site_type":""}</td>
 				<td>{"result":"success"/"error"}</td>
 			</tr>
 		</tbody>
